gcc/testsuite/rust/rustc/ui/impl-trait/precise-capturing/apit_dg.rs
fn hello(_: impl Sized + use<>) {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

